# planet-sim

./: Cargo.toml
assets/shaders/: circle.wgsl  default.wgsl  wire.wgsl
src/: engine.rs  lib.rs  main.rs  mesh.rs  shader.wgsl  win.rs
src/app/: controller.rs  mod.rs
src/engine/: buffer.rs  cam.rs  material.rs  mesh.rs  mod.rs  object.rs  pipeline.rs  renderer.rs  scene.rs  shader.rs  uniform.rs  window.rs
src/sim/: body.rs  mod.rs  system.rs
