[package]
name = "planet-sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.28.6"
env_logger = "0.10.0"
log = "0.4.19"
wgpu = "0.17.0"
pollster = "0.3.0"
bytemuck = { version = "1.12", features = [ "derive" ] }
anyhow = "1.0.72"
slotmap = "1.0.6"
glam = { version = "0.24.1", features = [ "bytemuck" ] }
colorous = "1.0.12"
